tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node)[Next](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
  *     * [Release Notes](https://docs.tigergraph.com/tigergraph-server/3.9/release-notes/)
  *     * [Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [Get Started](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/)
      * Installation
        * [On Docker](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/docker)
        * [On Cloud Marketplace](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/)
          * [AWS](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/aws)
          * [Azure](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/azure)
          * [GCP](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/gcp)
        * [On Linux](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/linux)
          * [System Requirements](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements)
          * [Linux On Bare Metal](https://docs.tigergraph.com/tigergraph-server/3.9/installation/bare-metal-install)
          * [Post Install Checks](https://docs.tigergraph.com/tigergraph-server/3.9/installation/post-install-check)
        * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/3.9/installation/license)
        * [Changing Ports](https://docs.tigergraph.com/tigergraph-server/3.9/installation/change-port)
        * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.9/installation/upgrade)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.9/installation/uninstallation)
      * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/)
        * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/gsql-sessions)
        * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/using-a-remote-gsql-client)
        * [GSQL Shell (Web)](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/web)
    * [Create Database](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/database-definition)
      * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/multigraph-overview)
  *     * [Load Data](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/)
      * [Overview](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/data-loading-overview)
      * [Load from Local Files](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-local-files)
      * [Load from Cloud Storage](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-cloud)
      * [Load from Data Warehouse](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-warehouse)
      * [Load from External Kafka](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-kafka)
      * [Load DataFrames from Spark](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/spark-connection-via-jdbc-driver)
      * [Manage Data Sources](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/manage-data-source)
      * [Stream from External Kafka (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/data-streaming-connector/kafka)
  *     * Advanced Topics
      * [System Management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/management-with-gadmin)
        * [Memory management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/memory-management)
        * [Manage TigerGraph services](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/manage-services)
        * [Workload Management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/workload-management)
        * [Metrics Reporting](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/system-metrics)
        * [Command Glossary](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/management-commands)
      * [Access Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/)
        * Authentication
          * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/enabling-user-authentication)
          * [User Credentials](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/user-credentials)
          * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/sso)
          * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/ldap)
        * Authorization
          * [User Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/user-management)
          * [Role Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/role-management)
          * [Access Control Model](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/access-control-model)
          * [Access Control Lists (ACLs)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/acl-management)
          * [Vertex-Level Access Control (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/vlac)
      * [Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/)
        * [Backup and Restore Configurations](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/configurations)
        * [Back up a Database Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/backup-cluster)
        * [Restore a Database Backup from the Same Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/restore-backup-same)
        * [Restore a Database Backup from Another Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/cross-cluster-backup)
        * [Database Import/Export](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/database-import-export)
        * [Legacy Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/gbar-legacy)
      * Cluster and HA Management
        * Cluster Resizing
          * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/expand-a-cluster)
          * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/shrink-a-cluster)
          * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/repartition-a-cluster)
          * [Cluster Replace](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/how_to-replace-a-node-in-a-cluster)
        * [Cross-Region Replication (CRR)](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-index)
          * [Set up CRR](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/set-up-crr)
          * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/fail-over)
          * [Troubleshooting CRR](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/troubleshooting)
          * [CRR FAQ](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq)
        * [High Availability (HA)](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-overview)
          * [Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-cluster)
          * [GSQL Server Support](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-for-gsql-server)
          * [Application Server Support](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-for-application-server)
          * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/cluster-commands)
          * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node)
      * [Architecture](https://docs.tigergraph.com/tigergraph-server/3.9/intro/internal-architecture)
        * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/multigraph-overview)
        * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/3.9/intro/transaction-and-acid)
        * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/continuous-availability-overview)
      * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.9/kubernetes/)
        * [Kubernetes Operator (Preview)](https://docs.tigergraph.com/tigergraph-server/3.9/kubernetes/k8s-operator/)
  *     * [Security](https://docs.tigergraph.com/tigergraph-server/3.9/security/)
      * [Auditing Privileged User Actions](https://docs.tigergraph.com/tigergraph-server/3.9/security/audit-privileged-actions)
      * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/3.9/security/encrypting-connections)
      * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/3.9/security/encrypting-data-at-rest)
      * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.9/security/file-output-policy)
      * [Configuring Login Protection](https://docs.tigergraph.com/tigergraph-server/3.9/security/login-protection)
  *     * [REST API Reference](https://docs.tigergraph.com/tigergraph-server/3.9/API/)
      * [Authentication](https://docs.tigergraph.com/tigergraph-server/3.9/API/authentication)
      * [Built-in Endpoints](https://docs.tigergraph.com/tigergraph-server/3.9/API/built-in-endpoints)
      * [Built-in Endpoints JSON Catalog](https://docs.tigergraph.com/tigergraph-server/3.9/API/json-catalog)
      * [Upsert data to graph](https://docs.tigergraph.com/tigergraph-server/3.9/API/upsert-rest)
  *     * Additional Resources
      * Troubleshooting and FAQs
        * [Knowledge base and FAQs](https://kb.tigergraph.com/)
        * [System Administration FAQs](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/system-administration-faqs)
        * [Log Files](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/log-files)
          * [Gathering Log Information with gcollect](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/gcollect)
          * [Audit Logs](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/audit-logs)
          * [Set up Log Viewing with Elasticsearch, Kibana and Filebeat](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/elk-filebeat)
        * [Troubleshooting Guide](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/troubleshooting-guide)
      * References
        * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.9/reference/configuration-parameters)
        * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.9/reference/return-codes)
        * [List of Privileges](https://docs.tigergraph.com/tigergraph-server/3.9/reference/list-of-privileges)
        * [List of Ports](https://docs.tigergraph.com/tigergraph-server/3.9/reference/ports)
        * [Glossary](https://docs.tigergraph.com/tigergraph-server/3.9/reference/glossary)
        * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/3.9/reference/patents-and-third-party-software)
        * [Legacy Version Documentation](https://docs.tigergraph.com/tigergraph-server/3.9/additional-resources/legacy-tg-versions)
        * [Comparing TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/3.9/intro/comparison-of-editions)
        * [Release and Patch Process](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process)


TigerGraph DB 3.9
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph DB 3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
  * Advanced Topics
  * Cluster and HA Management
  * [High Availability (HA)](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-overview)
  * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/3.9/modules/cluster-and-ha-management/pages/remove-failed-node.adoc)
### Contents
  * [Remove a single node](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_remove_a_single_node)
  * [Prerequisites](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_prerequisites)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_procedure)
  * [Remove multiple nodes](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_remove_multiple_nodes)
  * [Prerequisites](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_prerequisites_2)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_procedure_2)


# Removal of Failed Nodes
### Contents
  * [Remove a single node](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_remove_a_single_node)
  * [Prerequisites](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_prerequisites)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_procedure)
  * [Remove multiple nodes](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_remove_multiple_nodes)
  * [Prerequisites](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_prerequisites_2)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_procedure_2)


If a node in a high availability (HA) cluster has an unrecoverable failure, such as a hardware failure, you can remove the failed node from the cluster while keeping all your data intact. After removal, use the [cluster expansion](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/expand-a-cluster) feature to maintain the remaining nodes in a functioning state. Restoring is important as node removal does not redistribute the data in your cluster.
You should only consider removing a node when the node has failed. Removing a node from a cluster does not redistribute the data in the cluster. If all nodes are working in a cluster, and you want to reduce the size of the cluster, [shrink the cluster](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/shrink-a-cluster) instead.
## [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_remove_a_single_node)Remove a single node
If only a single node fails in a HA cluster, you can always remove the node without incurring any data loss.
### [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_prerequisites)Prerequisites
  * Your cluster should have a replication factor greater than 1.
  * All services on the rest of the nodes in the cluster except the node to be removed are in `RUNNING` status: You can check service status by running [`gadmin status -v`](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/management-with-gadmin#_gadmin_status)
    * If any service is down, try running `gadmin start all --ignore-error` to start them. If you cannot start them, please [open a support ticket](https://tigergraph.zendesk.com/hc/en-us/).


### [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_procedure)Procedure
To remove a failed node from a cluster, run the following command and replace `<node_name>` with the name of the node and `node_ip_address` with the internal IP address of the node:
```
$ gadmin cluster remove <node_name>:<node_ip_address>
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_remove_multiple_nodes)Remove multiple nodes
If there are multiple node failures in a cluster, recovering all data might not be possible. However, as long as there remains one complete replica of your data, it is possible to remove the failed nodes and restore the cluster afterwards with all data intact.
Node removal is intended for machine failures. Concurrent failures of multiple nodes is an extremely unlikely event under normal circumstances. Therefore, the default Kafka configurations in TigerGraph do not prepare for multi-node failure.
You can modify the default Kafka configurations to prepare for multi-node failure. However, you must do so before the failures happen.
If you experience multi-node failures without modifying the default configurations and still want to remove the failed nodes, please [open a support ticket](https://tigergraph.zendesk.com/hc/en-us/).   
---  
### [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_prerequisites_2)Prerequisites
  * Your cluster’s Kafka configurations have been modified **before** the failures occurred.
    * To prepare for 2-node failures, run `gadmin config set Kafka.MinInsyncReplicas 1` to set `Kafka.MinInsyncReplicas` to 1.
    * To prepare for concurrent failures of more nodes, run `gadmin config set Kafka.Replica.TopicReplicaFactor <value>` to satisfy this following condition:
      * `Replica.TopicReplicaFactor - <number_of_concurrent_failures> >= MinInsyncReplicas`
  * More than half of the nodes in your cluster are still operational.
  * Your cluster has a replication factor greater than 1.
  * All services in your cluster should be in `RUNNING` status. You can check service status by running [`gadmin status -v`](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/management-with-gadmin#_gadmin_status). If a service is down, and you cannot restart it, please [open a support ticket](https://tigergraph.zendesk.com/hc/en-us/).
  * There is at least 1 complete instance of the data. In other words, at least one replica does have a failed node.


### [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node#_procedure_2)Procedure
To remove failed nodes from a cluster, run the following command.
Replace `<node_name>` with the names of the nodes and `node_ip_address` with the internal IP addresses of the nodes. Connect the different node name-IP pairs with a comma (`,`):
```
$ gadmin cluster remove <node_name>:<node_ip_address>,<node_name>:<node_ip_address> ...
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


